# kdirtester

./: .gitignore  CMakeLists.txt
package/: metadata.desktop
package/contents/ui/: main.qml
plugin/: dirtester.cpp  dirtester.h  dirtreemodel.cpp  dirtreemodel.h  dtplugin.cpp  dtplugin.h  kdirtestplugin.cpp  kdirtestplugin.h  kdirtestplugin.pro  qmldir  wdnplugin.pro
